--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
           </div>
         </div>
       </div>
+      <div class="winner">
+        <h2><span id="winner-name"></span> wins!</h2>
+      </div>
     </div>
   </body>
 </html>
