--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
               <label for="p1start">Starting Advantage</label>
-              <input id="p1start" type="number" maximum=20 minimum=0>
+              <input id="p1start" type="number" max=20 min=0>
             </div>
           </div>
           <div class="col-md-6">
@@ -28,22 +28,23 @@
             </div>
             <div class="form-group">
               <label for="p2start">Starting Advantage</label>
-              <input id="p2start" type="number" maximum=20 minimum=0>
+              <input id="p2start" type="number" max=20 min=0>
             </div>
           </div>
         </div>
-        <button class="btn btn-default" type="submit" name="button">Submit Players</button>
+        <button id="submitbutton" class="btn btn-default" type="submit" name="button">Submit Players</button>
+        <button id="reset" class="btn btn-danger" type="button" name="button">Reset</button>
       </form>
       <div class="scores">
         <div class="row">
-          <div id="p1results" class="col-md-6">
+          <div id="p1results" class="col-sm-6">
             <h3><span id="result-name"></span> Score:<span id="p1score"></span> </h3>
             <h3>Turn Total: <span id="p1total"></span></h3>
             <h3>Current Roll: <span id="p1current"></span></h3>
             <button id="roll1" type="button" name="button">Roll!</button>
             <button id="hold1" type="button" name="button">Hold!</button>
           </div>
-          <div id="p2results" class="col-md-6">
+          <div id="p2results" class="col-sm-6">
             <h3><span id="result-name2"></span> Score: <span id="p2score"></span></h3>
             <h3>Turn Total: <span id="p2total"></span></h3>
             <h3>Current Roll: <span id="p2current"></span></h3>
