--- a/index.html
+++ b/index.html
@@ -3,58 +3,75 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Arbutus|Architects+Daughter|Ewert" rel="stylesheet">
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/scripts.js"></script>
     <title>Pig Dice</title>
   </head>
   <body>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Pig Dice Game</h1>
+      </div>
+    </div>
     <div class="container">
       <form>
         <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <label for="player-name">Enter player one name:</label>
-              <input id="player-name" type="form">
-            </div>
-            <div class="form-group">
-              <label for="p1start">Starting Advantage</label>
-              <input id="p1start" type="number" max=20 min=0>
+          <div class="col-sm-6">
+            <div id=player-one-col>
+              <div class="form-group">
+                <label for="player-name">Enter player one name:</label>
+                <input id="player-name" type="form">
+              </div>
+              <div class="form-group">
+                <label for="p1start">Starting Score</label>
+                <input id="p1start" type="number" max=20 min=0>
+              </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <label for="player-two-name">Enter player two name:</label>
-              <input id="player-two-name" type="form">
-            </div>
-            <div class="form-group">
-              <label for="p2start">Starting Advantage</label>
-              <input id="p2start" type="number" max=20 min=0>
+          <div class="col-sm-6">
+            <div id=player-two-col>
+              <div class="form-group">
+                <label for="player-two-name">Enter player two name:</label>
+                <input id="player-two-name" type="form">
+              </div>
+              <div class="form-group">
+                <label for="p2start">Starting Score</label>
+                <input id="p2start" type="number" max=20 min=0>
+              </div>
             </div>
           </div>
         </div>
-        <button id="submitbutton" class="btn btn-default" type="submit" name="button">Submit Players</button>
-        <button id="reset" class="btn btn-danger" type="button" name="button">Reset</button>
+        <div class="row">
+          <button id="submitbutton" class="btn btn-primary center-block" type="submit" name="button">Submit Players</button>
+          <button id="reset" class="btn btn-danger center-block" type="button" name="button">Reset</button>
+        </div>
       </form>
       <div class="scores">
         <div class="row">
-          <div id="p1results" class="col-sm-6">
-            <h3><span id="result-name"></span> Score:<span id="p1score"></span> </h3>
-            <h3>Turn Total: <span id="p1total"></span></h3>
-            <h3>Current Roll: <span id="p1current"></span></h3>
-            <button id="roll1" type="button" name="button">Roll!</button>
-            <button id="hold1" type="button" name="button">Hold!</button>
+          <div class="col-sm-6">
+            <div id="p1results">
+              <h3><span id="result-name"></span> Score: <span id="p1score"></span> </h3>
+              <h3>Turn Total: <span id="p1total"></span></h3>
+              <h3>Current Roll: <span id="p1current"></span></h3>
+              <button id="roll1" class="btn btn-default" type="button" name="button">Roll!</button>
+              <button id="hold1" class="btn btn-default" type="button" name="button">Hold!</button>
+            </div>
           </div>
-          <div id="p2results" class="col-sm-6">
-            <h3><span id="result-name2"></span> Score: <span id="p2score"></span></h3>
-            <h3>Turn Total: <span id="p2total"></span></h3>
-            <h3>Current Roll: <span id="p2current"></span></h3>
-            <button id="roll2" type="button" name="button">Roll!</button>
-            <button id="hold2" type="button" name="button">Hold!</button>
+          <div class="col-sm-6">
+            <div id="p2results">
+              <h3><span id="result-name2"></span> Score: <span id="p2score"></span></h3>
+              <h3>Turn Total: <span id="p2total"></span></h3>
+              <h3>Current Roll: <span id="p2current"></span></h3>
+              <button id="roll2" class="btn btn-default" type="button" name="button">Roll!</button>
+              <button id="hold2" class="btn btn-default" type="button" name="button">Hold!</button>
+            </div>
           </div>
         </div>
       </div>
       <div class="winner">
         <h2><span id="winner-name"></span> wins!</h2>
+        <img src="img/dice.gif">
       </div>
     </div>
   </body>
