begin adding two dice functionality

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="p1results">
               <h3><span id="result-name"></span> Score: <span id="p1score"></span> </h3>
               <h3>Turn Total: <span id="p1total"></span></h3>
-              <h3>Current Roll: <span id="p1current"></span></h3>
+              <h3>Current Roll: <span id="p1dice1"></span><span id="p1dice2"></span> </h3>
               <button id="roll1" class="btn btn-default" type="button" name="button">Roll!</button>
               <button id="hold1" class="btn btn-default" type="button" name="button">Hold!</button>
             </div>
@@ -62,7 +62,7 @@
             <div id="p2results">
               <h3><span id="result-name2"></span> Score: <span id="p2score"></span></h3>
               <h3>Turn Total: <span id="p2total"></span></h3>
-              <h3>Current Roll: <span id="p2current"></span></h3>
+              <h3>Current Roll: <span id="p2dice1"></span><span id="p2dice2"></span></h3>
               <button id="roll2" class="btn btn-default" type="button" name="button">Roll!</button>
               <button id="hold2" class="btn btn-default" type="button" name="button">Hold!</button>
             </div>
